# SingularityMC

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/ISSUE_TEMPLATE/: custom.md  feature_request.md  issue-report.md
.github/workflows/: ci.yml  release.yml
auto-update/: Cargo.toml  build-with-msvc.bat  build.rs
auto-update/src/: app.rs  config.rs  downloader.rs  error.rs  extract.rs  github_api.rs  launcher.rs  lib.rs  main.rs  manifest.rs  registry.rs  self_update.rs  updater.rs  util.rs
auto-update/src/i18n/: en.rs  mod.rs  pl.rs
auto-update/src/ui/: mod.rs  states.rs
auto-update/tests/: app_flow.rs  smoke.rs
docs/superpowers/plans/: 2026-04-10-subsystem3-addendum-v2.md
gradle/: libs.versions.toml
installer/: AppRun  singularitymc.desktop  singularitymc.iss
scripts/: add-copyright-notice.py  build-appimage.sh  build-icons.py  copy-release-files.sh  generate-manifest.main.kts
singularity-agent/: build.gradle.kts
singularity-agent/src/main/kotlin/com/singularity/agent/: AgentMain.kt
singularity-agent/src/main/kotlin/com/singularity/agent/bootstrap/: CacheVersionManager.kt  MappingTableLoader.kt  McJarScanner.kt  ModBootstrap.kt  VersionMetadata.kt
singularity-agent/src/main/kotlin/com/singularity/agent/cache/: CacheKey.kt  TransformCache.kt
singularity-agent/src/main/kotlin/com/singularity/agent/classloader/: ClassBytesSource.kt  JarRegistry.kt  ServiceLoaderMerger.kt  SingularityClassLoader.kt
singularity-agent/src/main/kotlin/com/singularity/agent/ipc/: IpcProtocol.kt  IpcServer.kt  MetricsCollector.kt
singularity-agent/src/main/kotlin/com/singularity/agent/loadingscreen/: LoadingScreenRenderer.kt  LoadingScreenState.kt  TipsLoader.kt
singularity-agent/src/main/kotlin/com/singularity/agent/logging/: AgentDiagnosticLogger.kt
singularity-agent/src/main/kotlin/com/singularity/agent/mixin/: EngineMixinBytecodeSource.kt  MixinBytecodeSource.kt  MixinConfigScanner.kt  SingularityMixinService.kt
singularity-agent/src/main/kotlin/com/singularity/agent/mod/: DependencyResolver.kt  DiscoveredMod.kt  DuplicateDetector.kt  FabricMetadataParser.kt  ForgeMetadataParser.kt  ModDependency.kt  ModDiscovery.kt  ModInfo.kt  ModInitializer.kt  ModLoadingOrchestrator.kt  ModVersionComparator.kt
singularity-agent/src/main/kotlin/com/singularity/agent/module/: ContractValidator.kt  ModuleDescriptor.kt  ModuleLoader.kt
singularity-agent/src/main/kotlin/com/singularity/agent/pipeline/: ConflictReport.kt  MixinDeclaration.kt  MixinType.kt  ParallelTreeTransformer.kt  PreScanAnalyzer.kt  SingularityTransformer.kt
singularity-agent/src/main/kotlin/com/singularity/agent/registry/: SingularityModRegistry.kt  VisibilityRules.kt
singularity-agent/src/main/kotlin/com/singularity/agent/remapping/: InheritanceTree.kt  MappingTable.kt  ReflectionInterceptor.kt  RemappingClassVisitor.kt  RemappingEngine.kt
singularity-agent/src/main/kotlin/com/singularity/agent/testbot/: TestBotAssertion.kt  TestBotExecutor.kt  TestBotParser.kt  TestBotScenario.kt
singularity-agent/src/main/kotlin/com/singularity/agent/threading/: ThreadingEngine.kt
singularity-agent/src/main/resources/: loading-tips.json  logback.xml
singularity-agent/src/test/kotlin/com/singularity/agent/: AgentMainBootstrapTest.kt  AgentMainTest.kt
singularity-agent/src/test/kotlin/com/singularity/agent/bootstrap/: CacheVersionManagerTest.kt  MappingTableLoaderTest.kt  McJarScannerTest.kt  ModBootstrapTest.kt
singularity-agent/src/test/kotlin/com/singularity/agent/cache/: CacheKeyTest.kt  TransformCacheTest.kt
singularity-agent/src/test/kotlin/com/singularity/agent/classloader/: JarRegistryTest.kt  ServiceLoaderMergerTest.kt  SingularityClassLoaderTest.kt
singularity-agent/src/test/kotlin/com/singularity/agent/ipc/: IpcProtocolTest.kt  IpcServerTest.kt  MetricsCollectorTest.kt
singularity-agent/src/test/kotlin/com/singularity/agent/loadingscreen/: LoadingScreenRendererTest.kt  LoadingScreenStateTest.kt  TipsLoaderTest.kt
singularity-agent/src/test/kotlin/com/singularity/agent/logging/: AgentDiagnosticLoggerTest.kt
singularity-agent/src/test/kotlin/com/singularity/agent/mixin/: EngineMixinBytecodeSourceTest.kt  MixinConfigScannerTest.kt  SingularityMixinServiceTest.kt
singularity-agent/src/test/kotlin/com/singularity/agent/mod/: DependencyResolverTest.kt  DuplicateDetectorTest.kt  FabricMetadataParserTest.kt  ForgeMetadataParserTest.kt  ModDiscoveryTest.kt  ModInitializerTest.kt  ModLoadingOrchestratorTest.kt  ModVersionComparatorTest.kt
singularity-agent/src/test/kotlin/com/singularity/agent/module/: ContractValidatorTest.kt  ModuleDescriptorTest.kt  ModuleLoaderTest.kt
singularity-agent/src/test/kotlin/com/singularity/agent/pipeline/: ParallelTreeTransformerTest.kt  PreScanAnalyzerTest.kt  SingularityTransformerTest.kt
singularity-agent/src/test/kotlin/com/singularity/agent/registry/: SingularityModRegistryTest.kt  VisibilityRulesTest.kt
singularity-agent/src/test/kotlin/com/singularity/agent/remapping/: InheritanceTreeTest.kt  MappingTableTest.kt  ReflectionInterceptorTest.kt  RemappingClassVisitorTest.kt  RemappingEngineTest.kt
singularity-agent/src/test/kotlin/com/singularity/agent/testbot/: TestBotExecutorTest.kt  TestBotParserTest.kt
singularity-agent/src/test/kotlin/com/singularity/agent/threading/: ThreadingEngineTest.kt
singularity-common/: build.gradle.kts
singularity-common/src/main/kotlin/com/singularity/common/contracts/: CapabilityBridgeContract.kt  CompatModule.kt  EventBridgeContract.kt  ModRegistryContract.kt  ModuleDescriptorData.kt  RegistryBridgeContract.kt  VisibilityContract.kt
singularity-launcher/: build.gradle.kts
singularity-launcher/src/main/kotlin/com/singularity/launcher/: Main.kt
singularity-launcher/src/main/resources/i18n/: strings_en.json  strings_pl.json
singularity-launcher/src/main/resources/news/: news.json
test-scenarios/: stress-basic.yml  stress-combined.yml  stress-dimensions.yml  stress-entities.yml  stress-redstone.yml  stress-regions.yml
(+289 files in other folders)
