[package]
name = "singularitymc-auto-update"
# Wersja AUTO-UPDATE binary — NIEZALEŻNA od wersji launchera.
#
# Launcher używa swojego git-tag-based schematu (`v0.1.0` → `v0.2.0` →
# ...), auto-update jest bumpowany RĘCZNIE tutaj gdy zmienia się
# manifest schema / download pipeline / install semantyka — zdarzenia
# rzadkie (raz na 6-12 miesięcy). Bump wymusza też update w
# `scripts/generate-manifest.main.kts::minAutoUpdateVersion` żeby
# remote manifest blokował stare auto-update binaries.
#
# Ta wersja jest embedowana w exe przez `build.rs` → env `BUILD_VERSION`
# → stałą `crate::BUILD_VERSION` używaną przez main.rs `--version` +
# update flow's minAutoUpdateVersion compatibility check.
# Bump per rule `feedback_auto_update_version_bump`: edycja auto-update/src
# → ten sam commit bumpuje version. 1.0.0 → 1.1.0 (minor: nowy feature —
# tar.gz bundle extraction + 3-package manifest schema). 1.1.0 → 1.1.1
# (patch: build.rs pre-release SemVer strip guard — hardening, no API change).
# 1.2.x → 1.3.0 (minor: nested runtime layout — RUNTIME_DIR per-OS
# "launcher/runtime" vs "launcher/lib/runtime" matching jpackage native
# layout + preserve_runtime/restore_preserved_runtime dla launcher-only
# updates. Breaks niezgodne z pre-1.3.x `install_dir/runtime/` na disku —
# fresh install path jedyna droga, stąd minor not patch).
version = "1.3.3"
edition = "2024"
rust-version = "1.85"
description = "Auto-update bootstrap for the SingularityMC launcher"

# Per-crate lint configuration: pedantic-warn by default so we catch code smells
# early across the whole auto-update binary. Individual allows should be added
# at the call site via `#[allow(clippy::...)]` with a justifying comment, NOT
# by relaxing these global levels.
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pragmatic allows — noise without payoff for an application binary:
module_name_repetitions = "allow"
missing_errors_doc = "allow"

[dependencies]
# GUI (egui immediate-mode + eframe runtime). Versions MUST match.
eframe = "0.34"
egui = "0.34"

# HTTP client — pinned to 0.12 deliberately.
#
# reqwest 0.13+ forces aws-lc-rs as the rustls backend (no public opt-out to
# the ring backend), and aws-lc-rs requires CMake + NASM at build time on
# Windows — a blocker on clean dev machines. 0.12 still uses rustls + ring.
#
# Roots: `rustls-tls-webpki-roots` (Mozilla CA bundle, wkompilowany w binarkę).
# Przerzuciliśmy z `rustls-tls-native-roots` w v0.1.2 bo u userów launcher
# wywalał "error sending request for url (api.github.com/...)" mimo że
# system miał działający internet (`curl 200 OK` potwierdzał). Root cause:
# rustls-native-certs na Windows czyta z Windows Certificate Store, a na
# niektórych instalacjach (stare Win10 bez DigiCert root update, antywirus
# z HTTPS inspection, corporate MitM) TLS handshake z api.github.com
# failuje. webpki-roots eliminuje tę zmienność — zawsze ta sama Mozilla CA
# lista. Trade-off: korporat MitM proxy z custom CA nie będzie zaufany.
# Dla graczy SingularityMC to akceptowalne.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls-webpki-roots",
    "charset",
    "http2",
] }

# Async runtime. `signal` feature enables Ctrl-C/SIGTERM handlers needed for
# graceful shutdown (flush partial downloads, release file locks) in later tasks.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "time",
    "signal",
    # `sync` for mpsc::channel — Task 2.11 wires UI button clicks (offline/retry)
    # into the parked state machine via bounded channel. Without this, the
    # update flow uses a 24h sleep as a "wait for user" hack, and the callbacks
    # are never installed so clicks are silently dropped.
    "sync",
] }

# Serialization (serde + serde_json for manifest/config files).
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing for SHA-256 manifest verification (Task 2.5).
sha2 = "0.10"
hex = "0.4"

# Streaming gzip decoder — decompress tar.gz w jednym kroku z download
# (read from reqwest bytes::Stream bez intermediate buffer pełnego pliku).
# Używane przez src/extract.rs dla launcher.tar.gz + jre-<os>.tar.gz.
flate2 = "1"

# Tar archive parser. Używamy `Archive::unpack()` dla batch extract do
# target dir. Zachowuje relatywne ścieżki, tar crate sanitizes paths
# (rzuca error na `..` albo absolute) — drugi poziom obrony przy zip-slip.
# Nie zachowuje Unix perms (nieistotne dla Windows .dll/.exe).
tar = "0.4"

# Atomic self-replace of the running executable (Task 2.7).
self-replace = "1.5"

# OS-level locale detection (Task 2.9 i18n routing).
sys-locale = "0.3"

# Error handling split:
#   thiserror -> typed enum errors in library modules (this binary's `error.rs`).
#   anyhow    -> top-level main() + ad-hoc propagation where typed variants
#                would be premature.
anyhow = "1.0"
thiserror = "2"

# Logging facade + production backend. Install the backend via env_logger::init()
# in main(); without that call, every `log::warn!` etc. is a silent no-op.
log = "0.4"
env_logger = "0.11"

# OS-specific directory lookups (AppData on Windows, ~/.config on Linux).
dirs = "6"

# Cross-platform URL opener for the "Help" button (opens Discord invite in
# default browser). Tiny crate, single-purpose. Picks ShellExecute on
# Windows, xdg-open/open on Linux/macOS.
open = "5"

# Atomic file write primitive shared by config.rs + updater.rs + self_update.rs.
# On Windows uses MoveFileExW with MOVEFILE_WRITE_THROUGH + MOVEFILE_REPLACE_EXISTING,
# which std::fs::rename does NOT set — without it the directory-entry update is
# itself buffered and a crash between rename-return and actual disk commit can
# lose the swap even after sync_all(). Also retries on ERROR_SHARING_VIOLATION
# (transient AV scanner locks on freshly-written files).
atomicwrites = "0.4"

# Random jitter for downloader retry backoff. Without jitter, N clients hitting
# a flaky CDN edge retry at identical offsets (2s, 4s, 8s...) — thundering-herd
# amplification. Full-jitter sleep = uniform(0, base*2^attempt), AWS's
# recommended pattern.
rand = "0.9"

# Semver-aware version comparison for `Version::is_older_than`. Used by
# `app.rs::process_release` to gate update install on
# `manifest.minAutoUpdateVersion`. Crate is tiny + battle-tested;
# rolling our own semver comparator (lexicographic + numeric components
# + pre-release ordering rules per SemVer 2.0) is a footgun we don't
# need.
semver = "1"

# Raw window handle access (Win32 HWND from eframe's CreationContext) so we
# can call DwmSetWindowAttribute for Win11 rounded corners. eframe 0.34 pulls
# raw-window-handle 0.6 transitively via winit — pinning it directly here
# keeps version drift visible in a single diff.
raw-window-handle = "0.6"

# Win32 DwmSetWindowAttribute for Win11 `DWMWA_WINDOW_CORNER_PREFERENCE`
# (OS-level rounded corners — works even when the wgpu surface can't do
# transparent compositing, which is the path that silently fails on NVIDIA +
# Overwolf's Vulkan implicit layer). Windows-only target gate keeps Linux
# builds from pulling in the crate.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
] }

# winreg — high-level wrapper nad Win32 registry API. Używane TYLKO na
# Windows do pisania `DisplayVersion` w HKCU Uninstall key po udanym
# auto-update, żeby Control Panel → Programy i Funkcje pokazywał realną
# wersję launchera (nie frozen installer AppVersion="1.0.0").
#
# winreg (crates.io) > bezpośredni `windows` crate API — ten drugi wymaga
# manual RegOpenKeyExW + RegSetValueExW + encoding UTF-16 zarządzania, a
# winreg enkapsuluje to w idiomatycznym Rust interface (RegKey::open_subkey
# + set_value::<String>). Industry-standard choice dla Rust Windows apps.
winreg = "0.55"

# winres — Win32 icon resource embedding dla auto-update.exe. Używana
# TYLKO w build.rs (build-time) żeby zlinkować `installer/icon.ico`
# jako embedded resource w skompilowanym .exe. Bez tego dwuklik exe
# w Explorer / taskbar icon / Alt+Tab pokazują generic Rust icon.
# Windows-only — icon resources nie mają sensu na Linuxie.
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
# tempfile — filesystem isolation for config / manifest / downloader / updater
# module tests. Each test gets a throw-away directory that self-deletes on drop.
tempfile = "3"
# wiremock — HTTP mock server for the GitHub Releases client (Task 2.4+).
# Runs a local Hyper instance per test, returns assertions when expectations
# don't match. Chosen over mockito/httpmock for first-class async (tokio)
# support — our reqwest client uses tokio and mockito's async-only via feature
# flags is less ergonomic. Source: https://crates.io/crates/wiremock
wiremock = "0.6"
# (`test-util` feature was dropped — paused-clock + `tokio::time::advance`
# raced wiremock's real HTTP I/O unpredictably. Integration tests under
# `tests/` control retry timing via `RunUpdateFlowConfig` knobs instead.)

[profile.release]
# Optimize binary size + startup time — we ship this to every user.
# `panic = "unwind"` (the default) is retained explicitly NOT to switch to
# abort: we want full backtraces on user crash reports even at the cost of
# a slightly larger binary. See review decision with Mateusz 2026-04-17.
lto = "thin"
codegen-units = 1
strip = "symbols"
